; ModuleID = '/home/carl/AnghaBench/freebsd/sys/i386/i386/extr_perfmon.c_perfmon_setup.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/i386/i386/extr_perfmon.c_perfmon_setup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NPMC = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@perfmon_inuse = common dso_local global i32 0, align 4
@PMCF_SYS_FLAGS = common dso_local global i32 0, align 4
@ctl_shadow = common dso_local global i32* null, align 8
@msr_pmc = common dso_local global i32* null, align 8
@pmc_shadow = common dso_local global i64* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @perfmon_setup(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* %4, align 4
  %8 = icmp slt i32 %7, 0
  br i1 %8, label %13, label %9

9:                                                ; preds = %2
  %10 = load i32, i32* %4, align 4
  %11 = load i32, i32* @NPMC, align 4
  %12 = icmp sge i32 %10, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %9, %2
  %14 = load i32, i32* @EINVAL, align 4
  store i32 %14, i32* %3, align 4
  br label %45

15:                                               ; preds = %9
  %16 = load i32, i32* %4, align 4
  %17 = shl i32 1, %16
  %18 = load i32, i32* @perfmon_inuse, align 4
  %19 = or i32 %18, %17
  store i32 %19, i32* @perfmon_inuse, align 4
  %20 = load i32, i32* @PMCF_SYS_FLAGS, align 4
  %21 = shl i32 %20, 16
  %22 = xor i32 %21, -1
  %23 = load i32, i32* %5, align 4
  %24 = and i32 %23, %22
  store i32 %24, i32* %5, align 4
  %25 = call i32 (...) @intr_disable()
  store i32 %25, i32* %6, align 4
  %26 = load i32, i32* %5, align 4
  %27 = load i32*, i32** @ctl_shadow, align 8
  %28 = load i32, i32* %4, align 4
  %29 = sext i32 %28 to i64
  %30 = getelementptr inbounds i32, i32* %27, i64 %29
  store i32 %26, i32* %30, align 4
  %31 = load i32, i32* %4, align 4
  %32 = call i32 @writectl(i32 %31)
  %33 = load i32*, i32** @msr_pmc, align 8
  %34 = load i32, i32* %4, align 4
  %35 = sext i32 %34 to i64
  %36 = getelementptr inbounds i32, i32* %33, i64 %35
  %37 = load i32, i32* %36, align 4
  %38 = load i64*, i64** @pmc_shadow, align 8
  %39 = load i32, i32* %4, align 4
  %40 = sext i32 %39 to i64
  %41 = getelementptr inbounds i64, i64* %38, i64 %40
  store i64 0, i64* %41, align 8
  %42 = call i32 @wrmsr(i32 %37, i64 0)
  %43 = load i32, i32* %6, align 4
  %44 = call i32 @intr_restore(i32 %43)
  store i32 0, i32* %3, align 4
  br label %45

45:                                               ; preds = %15, %13
  %46 = load i32, i32* %3, align 4
  ret i32 %46
}

declare dso_local i32 @intr_disable(...) #1

declare dso_local i32 @writectl(i32) #1

declare dso_local i32 @wrmsr(i32, i64) #1

declare dso_local i32 @intr_restore(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
